# STerm

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: release.cjs  setup-android-signing.sh
src/: App.vue  api.ts  crypto.ts  main.ts  storage.ts  styles.css  terminalThemes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential.rs  gist.rs  lib.rs  main.rs  portab.rs  sftp.rs  ssh.rs  state.rs
src/components/: AppLayout.vue  BaseSheet.vue  ConnectionForm.vue  ConnectionItem.vue  ConnectionSidebar.vue  ContextMenu.vue  FileBrowser.vue  MasterPasswordSetup.vue  PasswordPrompt.vue  SessionTabs.vue  SettingsPanel.vue  SftpPanel.vue  TerminalView.vue
src/composables/: connKeys.ts  syncMerge.ts  useConnections.ts  useGistSync.ts  useLongPress.ts  usePortab.ts  useResponsive.ts  useSecurity.ts  useSessions.ts  useSettings.ts  useTransfers.ts
src/logger/: GlobalLoggerService.ts  ILogger.ts  ILoggerService.ts  TauriLoggerService.ts  index.ts
src/styles/: tokens.css
