[package]
name = "sterm"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 默认的 aws-lc-rs 后端在 Windows 上需要 NASM 工具链；改用 ring 后端避免该依赖。
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"
anyhow = "1.0.103"
tokio-util = "0.7.18"
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

# 应用内更新仅在桌面端可用（updater 插件不支持移动端），按平台条件引入。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
